# streaming_flanT5

./: Dockerfile  README.md  pyproject.toml
client/: client.py
scripts/: docker-build.sh  docker-run.sh  export_requirements.sh
server/: server.py
